tests/sksl/errors/BinaryTypeMismatch.dsl.glsl
### Compilation failed:

error: type mismatch: '*' cannot operate on 'int', 'bool'

error: type mismatch: '||' cannot operate on 'int', 'float'

error: type mismatch: '==' cannot operate on 'float2', 'int'

error: type mismatch: '!=' cannot operate on 'float2', 'int'

error: type mismatch: '<' cannot operate on 'float2', 'float2'

error: type mismatch: '<' cannot operate on 'float2', 'float'

error: type mismatch: '<' cannot operate on 'float', 'float2'

7 errors
